@@ -6068,5 +6068,31 @@
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
+  },
+  {
+    "id": 211,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "Boosts the INT of a headgear by +2.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 693,
+    "itypeId": 1,
+    "name": "INT Scroll",
+    "note": "<Upgrade Armor Type: 3>\n<Upgrade Effect>\nLUK: +2\nPrefix: Smart\n</Upgrade Effect>\n\n<Menu Category: Upgraders>",
+    "occasion": 3,
+    "price": 180,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
   }
 ]
