@@ -30,7 +30,7 @@ Additions:
    > Resurgence: Magic skill learned at level 25.
   ~ Player 4, 0 skills:
    > 
- - Added 48 new items:
+ - Added 49 new items:
   ~ 7 recovery/buff items:
    > Large Potion
    > Large Elixir
@@ -62,7 +62,7 @@ Additions:
    > Mage Token
    > Cleric Token
    > Rogue Token
-  ~ 11 upgraders:
+  ~ 12 upgraders:
    > ATK Scroll ★
    > MAT Scroll ★
    > DEF Scroll ★
@@ -74,6 +74,7 @@ Additions:
    > MRG Scroll
    > EXR Scroll
    > MCR Scroll
+   > INT Scroll
   ~ 8 miscellaneous items:
    > Advanced Salvage Kit
    > Golden Tablet Piece (Left)
